--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Academic Project Page</title>
+  <title>AP-CLIP</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -52,67 +52,87 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
+<!--             <div class="title is-1 publication-title" style="display: flex; align-items: center; justify-content: center;">
+              <img src="static/images/logo.png" alt="Symbol-LLM Logo" style="max-width: 100px; max-height: 100px;">
+              Symbol-LLM: Towards Foundational Symbol-centric Interface For Large Language Models
+            </div> -->
+            <h1 class="title is-1 publication-title">
+              Generating Action-conditioned Prompts for Open-vocabulary Video Action Recognition
+            </h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
+                <a href="https://chengyou-jia.github.io/" target="_blank">Chengyou Jia</a><sup>1,2</sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
+                  <a href="#" target="_blank">Minnan Luo</a><sup>1,*</sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
-                  </span>
+                    <a href="#" target="_blank">Xiaojun Chang</a><sup>2</sup>,</span>
+                    <span class="author-block">
+                     <a href="#" target="_blank">Zhuohang Dang</a><sup>1</sup>,</span>
+                     <span class="author-block">
+                      <a href="#" target="_blank">Mingfei Han</a><sup>2</sup>,</span>
+                      <span class="author-block">
+                       <a href="#" target="_blank">Mengmeng Wang</a><sup>3</sup>,</span>
+                       <span class="author-block">
+                        <a href="#" target="_blank">Guang Dai</a><sup>4</sup>,</span>
+                        <span class="author-block">
+                         <a href="#" target="_blank">Sizhe Dang</a><sup>1</sup>,</span>
+                         <span class="author-block">
+                          <a href="#" target="_blank">Jingdong Wang</a><sup>5</sup></span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="author-block"><sup>1</sup>Xi'an Jiaotong University</span> 
+                    <span class="author-block"><sup>2</sup>University of Technology Sydney</span><br>
+                    <span class="author-block"><sup>3</sup>Zhejiang University</span>
+                    <span class="author-block"><sup>4</sup>SGIT AI Lab</span>
+                    <span class="author-block"><sup>5</sup>Baidu Inc</span><br>
+                    <span class="eql-cntrb"><small><sup>*</sup>Corresponding Author.</small></span>
                   </div>
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
-                         <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
-                        class="external-link button is-normal is-rounded is-dark">
-                        <span class="icon">
-                          <i class="fas fa-file-pdf"></i>
-                        </span>
-                        <span>Paper</span>
-                      </a>
-                    </span>
-
-                    <!-- Supplementary PDF link -->
-                    <span class="link-block">
-                      <a href="static/pdfs/supplementary_material.pdf" target="_blank"
-                      class="external-link button is-normal is-rounded is-dark">
-                      <span class="icon">
-                        <i class="fas fa-file-pdf"></i>
+                          <a href="https://arxiv.org/pdf/2312.02226" target="_blank"
+                              class="external-link button is-normal is-rounded is-dark">
+                              <span class="icon">
+                                  <i class="fas fa-file-pdf"></i>
+                              </span>
+                              <span>Paper</span>
+                          </a>
                       </span>
-                      <span>Supplementary</span>
-                    </a>
-                  </span>
 
-                  <!-- Github link -->
-                  <span class="link-block">
-                    <a href="https://github.com/YOUR REPO HERE" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
-                      <i class="fab fa-github"></i>
-                    </span>
-                    <span>Code</span>
-                  </a>
-                </span>
+                      <!-- Github link -->
+                      <span class="link-block">
+                          <a href="#" target="_blank"
+                              class="external-link button is-normal is-rounded is-dark">
+                              <span class="icon">
+                                  <i class="fab fa-github"></i>
+                              </span>
+                              <span>Code</span>
+                          </a>
+                      </span>
 
-                <!-- ArXiv abstract Link -->
-                <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
-                  class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                    <i class="ai ai-arxiv"></i>
-                  </span>
-                  <span>arXiv</span>
-                </a>
+                      <!-- ArXiv abstract Link -->
+                      <span class="link-block">
+                          <a href="https://arxiv.org/abs/2312.02226" target="_blank"
+                              class="external-link button is-normal is-rounded is-dark">
+                              <span class="icon">
+                                  <i class="ai ai-arxiv"></i>
+                              </span>
+                              <span>arXiv</span>
+                          </a>
+                      </span>
+
+                      <span class="link-block">
+                          <a href="#" target="_blank"
+                              class="external-link button is-normal is-rounded is-dark">
+                              <span class="icon">
+                                  🤗
+                              </span>
+                              <span>Data</span>
+                          </a>
+                      </span>
               </span>
             </div>
           </div>
@@ -124,21 +144,32 @@
 
 
 <!-- Teaser video-->
-<section class="hero teaser">
-  <div class="container is-max-desktop">
-    <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <!-- Your video here -->
-        <source src="static/videos/banner_video.mp4"
-        type="video/mp4">
-      </video>
-      <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
-      </h2>
-    </div>
+<!-- End teaser video -->
+
+<!-- Image carousel -->
+<section class="hero">
+  <div class="hero-body">
+      <div class="container is-max-desktop">
+          <div class="columns is-centered">
+              <div class="column is-four-fifths">
+                  <div class="item">
+                      <!-- Your image here -->
+                      <div class="images-container">
+                        <img src="static/images/intro_merge.png" alt="ap-clip" />
+                        <img src="static/images/adv1.png" alt="ap-clip" />
+                    </div>
+                      <h2 class="subtitle" style="font-size: 16px;">
+                      </h2>
+                      (1) Left figure provides comparative visualization of prompts and their corresponding match scores. It is evident that prompts incorporating auxiliary knowledge significantly enhance the model's recognition.
+                      （2）  Right figure provides comparative visualization of text embeddings space for different prompts. Action-conditioned prompts offer multi-attribute descriptions of actions, not only establishing connections (dashed blue double arrow) with foundational actions but also providing the necessary knowledge (dashed red ellipse) to discern novel actions.
+                    </h2>
+                  </div>
+              </div>
+          </div>
+      </div>
   </div>
 </section>
-<!-- End teaser video -->
+<!-- End image carousel -->
 
 <!-- Paper abstract -->
 <section class="section hero is-light">
@@ -148,7 +179,8 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper tellus sed ante aliquam tempus. Etiam porttitor urna feugiat nibh elementum, et tempor dolor mattis. Donec accumsan enim augue, a vulputate nisi sodales sit amet. Proin bibendum ex eget mauris cursus euismod nec et nibh. Maecenas ac gravida ante, nec cursus dui. Vivamus purus nibh, placerat ac purus eget, sagittis vestibulum metus. Sed vestibulum bibendum lectus gravida commodo. Pellentesque auctor leo vitae sagittis suscipit.
+            Exploring open-vocabulary video action recognition is a promising venture, which aims to recognize previously unseen actions within any arbitrary set of categories. 
+Existing methods typically adapt pretrained image-text models to the video domain, capitalizing on their inherent strengths in generalization. A common thread among such methods is the augmentation of visual embeddings with temporal information to improve the recognition of seen actions. Yet, they compromise with standard less-informative action descriptions, thus faltering when confronted with novel actions. Drawing inspiration from human cognitive processes, we argue that augmenting text embeddings with human prior knowledge is pivotal for open-vocabulary video action recognition. To realize this, we innovatively blend video models with Large Language Models (LLMs) to devise Action-conditioned Prompts. Specifically, we harness the knowledge in LLMs to produce a set of descriptive sentences that contain distinctive features for identifying given actions. Building upon this foundation, we further introduce a multi-modal action knowledge alignment mechanism to align concepts in video and textual knowledge encapsulated within the prompts. Extensive experiments on various video benchmarks, including zero-shot, few-shot, and base-to-novel generalization settings, demonstrate that our method not only sets new SOTA performance but also possesses excellent interpretability.
           </p>
         </div>
       </div>
@@ -158,128 +190,82 @@
 <!-- End paper abstract -->
 
 
-<!-- Image carousel -->
+
+
 <section class="hero is-small">
   <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          First image description.
-        </h2>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          Second image description.
-        </h2>
-      </div>
-      <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-         Third image description.
-       </h2>
-     </div>
-     <div class="item">
-      <!-- Your image here -->
-      <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
-      <h2 class="subtitle has-text-centered">
-        Fourth image description.
-      </h2>
-    </div>
-  </div>
-</div>
-</div>
-</section>
-<!-- End image carousel -->
-
-
-
-
-<!-- Youtube video -->
-<section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <!-- Paper video. -->
-      <h2 class="title is-3">Video Presentation</h2>
-      <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
-          
-          <div class="publication-video">
-            <!-- Youtube embed code here -->
-            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <div class="container  is-max-desktop">
+          <div class="columns is-centered has-text-centered">
+              <div class="column is-four-fifths">
+                  <h2 class="title is-3">Overview</h2>
+                  <div class="item">
+                      <!-- Your image here -->
+                      <img src="static/images/overview1.png" alt="ap-clip" />
+                      <h2 class="subtitle has-text-centered" style="font-size: 16px;">
+                          Illustration of Action-conditioned Prompts
+                          generation workflow: On the left, the process of defining the <i>Hierarchical Attribute Graph</i> is visualized. The middle section depicts the querying process with LLMs, transforming action and attributes into structured prompts. On the right, we present sample snippets of the prompts generated.
+                      </h2>
+                  </div>
+              </div>
           </div>
-        </div>
       </div>
-    </div>
   </div>
 </section>
-<!-- End youtube video -->
 
 
-<!-- Video carousel -->
+
+
+
 <section class="hero is-small">
   <div class="hero-body">
-    <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel1.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/carousel2.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="100%">\
-            <!-- Your video file here -->
-            <source src="static/videos/carousel3.mp4"
-            type="video/mp4">
-          </video>
-        </div>
+      <div class="container  is-max-desktop">
+          <div class="columns is-centered has-text-centered">
+              <div class="column is-four-fifths">
+                  <h2 class="title is-3">Results on Base-to-novel Generalization</h2>
+                  <div class="item">
+                      <!-- Your image here -->
+                      <img src="static/images/base-to-novel.png" alt="ap-clip" />
+                      <h2 class="subtitle has-text-centered" style="font-size: 16px;">
+                        We compare the generalization ability of AP-CLIP with other models that adapt CLIP.
+                      </h2>
+                  </div>
+              </div>
+          </div>
       </div>
-    </div>
   </div>
 </section>
-<!-- End video carousel -->
 
-
-
-
-
-
-<!-- Paper poster -->
-<section class="hero is-small is-light">
+<section class="hero is-small">
   <div class="hero-body">
-    <div class="container">
-      <h2 class="title">Poster</h2>
-
-      <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
-          </iframe>
-        
+      <div class="container  is-max-desktop">
+          <div class="columns is-centered has-text-centered">
+              <div class="column is-four-fifths">
+                  <h2 class="title is-3">Results on Few-shot setting</h2>
+                  <div class="item">
+                      <!-- Your image here -->
+                      <img src="static/images/few-shot.png" alt="ap-clip" />
+                      <h2 class="subtitle has-text-centered" style="font-size: 16px;">
+                        We compare the generalization ability of AP-CLIP with other models that adapt CLIP.
+                      </h2>
+                  </div>
+              </div>
+          </div>
       </div>
-    </div>
-  </section>
-<!--End paper poster -->
+  </div>
+</section>
 
 
 <!--BibTex citation -->
-  <section class="section" id="BibTeX">
-    <div class="container is-max-desktop content">
-      <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
-    </div>
+<section class="section" id="BibTeX">
+  <div class="container is-max-desktop content">
+    <h2 class="title">BibTeX</h2>
+    <pre><code>@article{jia2023generating,
+      title={Generating Action-conditioned Prompts for Open-vocabulary Video Action Recognition},
+      author={Jia, Chengyou and Luo, Minnan and Chang, Xiaojun and Dang, Zhuohang and Han, Mingfei and Wang, Mengmeng and Dai, Guang and Dang, Sizhe and Wang, Jingdong},
+      journal={arXiv preprint arXiv:2312.02226},
+      year={2023}
+    }</code></pre>
+  </div>
 </section>
 <!--End BibTex citation -->
 
